--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "AdminAletheia",
+  "name": "CannaReD",
   "private": true,
   "version": "1.0.1",
-  "description": "Aletheia Data Admin",
+  "description": "CannaReD Data Admin",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
@@ -32,11 +32,11 @@
     "strapi-provider-upload-aws-s3": "^3.6.3",
     "strapi-provider-upload-ipfs": "0.0.2",
     "strapi-provider-upload-nft-storage": "0.0.2",
-    "strapi-provider-upload-web3-storage": "0.0.6",
+    "strapi-provider-upload-web3-storage": "^0.1.1",
     "strapi-utils": "3.6.3"
   },
   "author": {
-    "name": "Aletheia Dev Team"
+    "name": "CannaReD Dev Team"
   },
   "strapi": {
     "uuid": "88990541-7204-42c6-aeab-9f97d13d83a8"
